--- a/schema-ruby-erb/model_generation/Templates/kotlin_android.erb
+++ b/schema-ruby-erb/model_generation/Templates/kotlin_android.erb
@@ -1,3 +1,4 @@
+// THIS IS A GENERATED FILE. DO NOT EDIT THIS
 /*
  * Copyright 2020 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA
  *
@@ -14,135 +15,42 @@
  * limitations under the License.
  */
 <%
-  require_relative 'Templates/template_helper.rb'
-  require_relative 'Templates/kotlin_template_helper.rb'
 
-  @tab = "    "
   @helper.languageIdentifier = SupportedLanguages.new.kotlin
   @helper.defaultDeclarationType = TypeInterface.new
 
   def fullDeclaration(objectType)
-    @helper.fill_type(objectType)
-
     output = "package #{objectType.synthax_type.package.android}\n"
 
     output += @kotlinHelper.resolveImports(objectType)
     output += @kotlinHelper.resolveDocumentation(objectType)
-    output += resolveObjectType(objectType)
+    output += resolveObject(objectType)
 
     output
   end
 
-  def resolveObjectType(objectType)
+  def resolveObject(objectType)
     output = ""
 
     if @helper.inheritFrom_widget(objectType)
-      output += initCommonClass(objectType)
+      output += @kotlinHelper.initInterface(objectType)
     else
-      if @helper.is_enum(objectType)
-        output += @kotlinHelper.initEnum(objectType)
-      else
-        if @helper.is_interface(objectType) or @helper.is_abstract(objectType)
-          output += @kotlinHelper.initInterfaceOrAbstract(objectType)
-        else
-          output += initDataClass(objectType)
-        end
-      end
+      output += @kotlinHelper.resolveKotlinObject(objectType)
     end
 
-    output = handleInnerTypes(objectType.synthax_type.sameFileTypes, output)
+    output += handleInnerTypes(objectType.synthax_type.sameFileTypes)
 
     output
   end
 
-  def handleTypeName(objectType, variable, shouldAddComma = false)
-    if variable.instance_of? Dictionary
-      output = @kotlinHelper.dictionary_variable_declaration(variable)
-    else
-      output = @kotlinHelper.single_variable_declaration(variable)
-    end
-
-    output = variable.isBindable ? "Bind<#{output}>" : output
-    output = variable.class == List ? "List<#{output}>" : output
-    output = variable.isOptional ? output + "?" : output
-    output
-  end
-
-  def initDataClass(objectType)
-    typeKind = "data class"
-    
-    output = "\n#{typeKind} #{objectType.synthax_type.name}"
-
-    counter = 0 
-    if objectType.synthax_type.variables.any?
-      output += " ("
-      for variable in objectType.synthax_type.variables
-        output += "\n#{@tab}#{@kotlinHelper.handleFieldAccessor(variable)}#{@kotlinHelper.handleFieldMutable(variable)}#{variable.name}: #{@kotlinHelper.handleTypeNameAndDefault(objectType, variable, objectType.synthax_type.variables.size - 1 != counter)}"
-        counter += 1
-      end
-    end
-
-    for inherited in objectType.synthax_type.inheritFrom
-      if @helper.is_interface(inherited) && @helper.has_variables(inherited)
-        if objectType.synthax_type.variables.size == 0
-            output += " ("
-        else
-          output += ","
-        end
-        counter = 0 
-        for variable in inherited.synthax_type.variables
-          output += "\n#{@tab}#{@kotlinHelper.handleFieldAccessor(variable)}override #{@kotlinHelper.handleFieldMutable(variable)}#{variable.name}: #{@kotlinHelper.handleTypeNameAndDefault(objectType, variable, inherited.synthax_type.variables.size - 1 != counter)}"
-          counter += 1
-        end
-      end
-    end
-    
-    output += @kotlinHelper.getSuperClasses(objectType)
-
-    output
-  end
-
-  def initCommonClass(objectType)
-    typeKind = @helper.fetch_built_in_type_declaration(objectType.synthax_type.type)
-
-    output = "\n#{typeKind} #{objectType.synthax_type.name}"
-    
-    counter = 0 
-    if objectType.synthax_type.variables.any?
-      output += " {"
-      for variable in objectType.synthax_type.variables 
-        output += "\n#{@tab}#{@kotlinHelper.handleFieldAccessor(variable)} #{@kotlinHelper.handleFieldMutable(variable)}#{variable.name}: #{handleTypeName(objectType, variable, objectType.synthax_type.variables.size - 1 != counter)}"
-      end
-    end
-
-    for inherited in objectType.synthax_type.inheritFrom
-      if @helper.is_interface(inherited) && @helper.has_variables(inherited)
-        if !output.include? "{"
-            output += " {"
-        end
-        counter = 0 
-        for variable in inherited.synthax_type.variables
-          output += "\n#{@tab}#{@kotlinHelper.handleFieldAccessor(variable)} #{@kotlinHelper.handleFieldMutable(variable)}#{variable.name}: #{handleTypeName(objectType, variable, inherited.synthax_type.variables.size - 1 != counter)}"
-          counter += 1
-        end
-      end
-    end
-
-    if output.include? "{"
-      output += "\n}"
-    end
-
-    output
-  end
-
-  def handleInnerTypes(objectTypes, input)
-    output = input
+  def handleInnerTypes(objectTypes)
+    output = ""
     for objectType in objectTypes
       output += "\n#{@kotlinHelper.resolveDocumentation(objectType)}"
-      output += "\n#{resolveObjectType(objectType)}"
+      output += "\n#{resolveObject(objectType)}"
       possibleNestedTypes = objectType.synthax_type.sameFileTypes
       if possibleNestedTypes.size > 0
-        handleInnerTypes(objectType.synthax_type.sameFileTypes, output)
+        handleInnerTypes(objectType.synthax_type.sameFileTypes)
       end
     end
     output
