--- a/schema-ruby-erb/model_generation/Templates/kotlin_backend.erb
+++ b/schema-ruby-erb/model_generation/Templates/kotlin_backend.erb
@@ -19,32 +19,32 @@
   @helper.languageIdentifier = SupportedLanguages.new.kotlinBackend
   @helper.defaultDeclarationType = TypeDataClass.new
 
-  def fullDeclaration(objectType)
+  def full_declaration(objectType)
     output = "package #{objectType.synthax_type.package.backend}\n"
 
-    output += @kotlinHelper.resolveImports(objectType)
-    output += @kotlinHelper.resolveDocumentation(objectType)
-    output += resolveObject(objectType)
+    output += @kotlinHelper.resolve_imports(objectType)
+    output += @kotlinHelper.resolve_documentation(objectType)
+    output += resolve_object(objectType)
 
     output
   end
 
-  def resolveObject(objectType)
+  def resolve_object(objectType)
     output = ""
-    output += @kotlinHelper.resolveKotlinObject(objectType)
-    output += handleInnerTypes(objectType.synthax_type.sameFileTypes)
+    output += @kotlinHelper.resolve_kotlin_object(objectType)
+    output += handle_inner_types(objectType.synthax_type.sameFileTypes)
 
     output
   end
 
-  def handleInnerTypes(objectTypes)
+  def handle_inner_types(objectTypes)
     output = ""
     for objectType in objectTypes
-      output += "\n\n#{@kotlinHelper.resolveDocumentation(objectType)}"
-      output += "#{resolveObject(objectType)}"
+      output += "\n\n#{@kotlinHelper.resolve_documentation(objectType)}"
+      output += "#{resolve_object(objectType)}"
       possibleNestedTypes = objectType.synthax_type.sameFileTypes
       if possibleNestedTypes.size > 0
-        handleInnerTypes(objectType.synthax_type.sameFileTypes, output)
+        handle_inner_types(objectType.synthax_type.sameFileTypes, output)
       end
     end
     output
@@ -52,5 +52,5 @@
 
 -%>
 <%=
-fullDeclaration(objectType) 
+full_declaration(objectType) 
 %>
