refactor kotlin init interface

--- a/schema-ruby-erb/model_generation/Templates/kotlin_android.erb
+++ b/schema-ruby-erb/model_generation/Templates/kotlin_android.erb
@@ -32,6 +32,7 @@
   def resolve_object(object_type)
     output = ""
 
+    # Android widgets are generated interfaces
     if @kotlinHelper.inheritFrom_widget(object_type)
       output += @kotlinHelper.init_interface(object_type)
     else
